Remove swiper top padding and fix media alignments

--- a/packages/style/scss/swiper.scss
+++ b/packages/style/scss/swiper.scss
@@ -33,6 +33,13 @@
 
     .container .responsive-embed-wrapper {
       max-width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      .html-embed {
+        flex-grow: 1;
+      }
     }
   }
 
